--- a/assets/css/non-critical/comment.css
+++ b/assets/css/non-critical/comment.css
@@ -99,3 +99,8 @@
   border-bottom: 0px dotted var(--bg1);
   padding: 2rem 0;
 }
+
+.wl-addr {
+  display: none !important;
+  color: transparent !important;
+}
